Reorganize asset directory structure
Move images to a dedicated 'images' subdirectory and update import paths across components

- Relocated image assets from root 'assets' to 'assets/images'
- Updated import statements in Footer,
- Removed deprecated audio and spotify assets from root directory
- Added new images to the images directory

--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -1,14 +1,14 @@
 ---
 import { Image } from "astro:assets";
 import Carousel from "./Carousel.astro";
-import patternSvg from "../../assets/pattern.svg";
-import microsoftImg from "../../assets/microsoft.png";
-import xkcdImg from "../../assets/xkcd.png";
-import gandalfImg from "../../assets/gandalf.png";
-import bbcImg from "../../assets/bbc.png";
-import chewbaccaImg from "../../assets/chewbacca.png";
-import spotifyImg from "../../assets/spotify.gif";
-import winterImg from "../../assets/winter.png";
+import patternSvg from "../../assets/images/pattern.svg";
+import microsoftImg from "../../assets/images/microsoft.png";
+import xkcdImg from "../../assets/images/xkcd.png";
+import gandalfImg from "../../assets/images/gandalf.png";
+import bbcImg from "../../assets/images/bbc.png";
+import chewbaccaImg from "../../assets/images/chewbacca.png";
+import spotifyImg from "../../assets/images/spotify.gif";
+import winterImg from "../../assets/images/winter.png";
 
 const carouselImages = [
   {
