Add verification phases visualization to homepage
Create components to display verification process steps:
- Implement PhaseColumn for structured step representation
- Add VerificationStep for individual verification details
- Integrate VerificationPhases component into homepage
- Visualize DNSSEC, X.509, and CMS verification chains

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import About from "../components/Homepage/About.astro";
 import Founder from "../components/Homepage/Founder.astro";
 import HowItWorks from "../components/Homepage/HowItWorks.astro";
 import Benefits from "../components/Homepage/Benefits.astro";
+import VerificationPhases from "../components/Homepage/VerificationPhases.astro";
 ---
 
 <Layout
@@ -16,6 +17,7 @@ import Benefits from "../components/Homepage/Benefits.astro";
   <UseCases />
   <Benefits />
   <HowItWorks />
+  <VerificationPhases />
   <Founder />
   <About />
 </Layout>
