Link to Gus' website from quote on homepage

--- a/src/components/Homepage/Founder.astro
+++ b/src/components/Homepage/Founder.astro
@@ -29,7 +29,7 @@ import founderPortrait from "../../assets/images/founder-portrait.png";
         </p>
 
         <div class="pt-2 space-y-1">
-          <p class="font-bold text-white">Gus Narea.</p>
+          <p class="font-bold text-white"><a href="https://gus.engineer">Gus Narea</a>.</p>
           <p>Creator of VeraId, and former member of Auth0's core engineering team.</p>
         </div>
       </div>
