Improve copy on hero and SEO metadata

--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -34,16 +34,14 @@ const carouselImages = [
       />
     </div>
     <div class="relative text-center">
-      <h1 class="text-[2.1rem] sm:text-5xl md:text-7xl md:mb-8 mb-4 leading-tight text-[#D9FFEF]">
-        <span
-          class="bg-gradient-to-r from-[#01FD93] via-[#87FFCC] to-[#D9FFEF] inline-block text-transparent bg-clip-text"
-          >User- and developer-friendly</span
-        >
-        <br />
-        authentication based on DNS
+      <h1
+        class="text-[2.1rem] sm:text-5xl md:text-7xl md:mb-8 mb-4 leading-tight bg-gradient-to-r from-[#01FD93] via-[#87FFCC] to-[#D9FFEF] text-transparent bg-clip-text"
+      >
+        Securely attribute content to domain names
       </h1>
       <p class="text-md sm:text-xl md:text-2xl text-neutral-300 mx-auto max-w-4xl">
-        VeraId is a decentralised protocol that securely attributes content to domain names.
+        VeraId is a decentralised, user-friendly, offline-first authentication protocol powered by
+        DNS.
       </p>
       <Carousel images={carouselImages} />
     </div>
