--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,8 @@ import Benefits from "../components/Homepage/Benefits.astro";
 ---
 
 <Layout
-  title="VeraId | DNS-based authentication, with or without the Internet"
-  description="VeraId is a decentralised protocol to securely attribute content to domain names - without the Internet or passwords."
+  title="User- and developer-friendly authentication based on DNS"
+  description="VeraId is a decentralised, user-friendly, offline-first authentication protocol powered by DNS"
 >
   <Hero />
   <UseCases />
