Add 404 page with custom SVG and improve founder portrait alt text

--- a/src/components/Homepage/Founder.astro
+++ b/src/components/Homepage/Founder.astro
@@ -11,7 +11,11 @@ import founderPortrait from "../../assets/images/founder-portrait.png";
 
     <div class="flex flex-col md:flex-row gap-8 items-center">
       <div class="w-full overflow-hidden flex justify-center md:justify-start">
-        <Image src={founderPortrait} alt="" class="object-cover" />
+        <Image
+          src={founderPortrait}
+          alt="Portrait of the founder, Gus Narea"
+          class="object-cover"
+        />
       </div>
 
       <div class="space-y-4">
