draft tech overview

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import RedditIcon from "../assets/icons/reddit.svg?raw";
 
 const veraidLinks = [
   { href: "/ux", text: "User Experience" },
-  { href: "/architecture", text: "Architecture" },
+  { href: "/overview", text: "Tech overview" },
   { href: "/spec", text: "Spec" },
   { href: "/prior-art", text: "Prior art" },
 ];
