--- a/src/components/NewsletterSignup.astro
+++ b/src/components/NewsletterSignup.astro
@@ -14,32 +14,53 @@
 
   <!-- Right column: Form with input, button, and checkbox -->
   <div>
-    <form>
+    <form
+      method="POST"
+      action="https://zcsub-cmpzourl.maillist-manage.com/weboptin.zc"
+      target="_zcSignup"
+      onsubmit="zcScptlessSubmit(this)"
+    >
       <div class="flex flex-col lg:flex-row flex-wrap gap-2 lg:gap-4 mb-4">
         <input
-          type="email"
-          placeholder="you@example.com"
+          type="text"
+          placeholder="Email"
+          name="CONTACT_EMAIL"
           required
           class="w-full lg:w-auto lg:flex-grow bg-neutral-800 text-white px-4 py-2.5 rounded-full"
           aria-label="Email address"
         />
         <button
           type="submit"
+          name="SIGNUP_SUBMIT_BUTTON"
+          value="Sign up"
           class="w-full lg:w-auto bg-green-400 hover:bg-green-300 text-black font-bold px-4 lg:px-8 py-2.5 rounded-full"
         >
-          Subscribe
+          Sign up
         </button>
       </div>
 
-      <div class="flex items-center gap-2 text-xs">
-        <input type="checkbox" id="privacy-policy" required class="h-4 w-4" />
-        <label for="privacy-policy">
-          I understand <a
-            href="/privacy-policy "
-            class="text-green-300 hover:text-green-200 hover:underline">Relaycorp's policies</a
-          > and authorise them to send me emails about Awala.
-        </label>
-      </div>
+      <input type="hidden" name="submitType" value="optinCustomView" />
+      <input type="hidden" name="emailReportId" value="" />
+      <input type="hidden" name="formType" value="QuickForm" />
+      <input type="hidden" name="zx" value="12a19c3a4" />
+      <input type="hidden" name="zcvers" value="3.0" />
+      <input type="hidden" name="oldListIds" value="" />
+      <input type="hidden" name="mode" value="OptinCreateView" />
+      <input type="hidden" name="zcld" value="113d34b06f17e386f" />
+      <input type="hidden" name="zctd" value="113d34b06f17e37a9" />
+      <input type="hidden" name="document_domain" value="" />
+      <input type="hidden" name="zc_Url" value="zcsub-cmpzourl.maillist-manage.com" />
+      <input type="hidden" name="new_optin_response_in" value="2" />
+      <input type="hidden" name="duplicate_optin_response_in" value="2" />
+      <input type="hidden" name="zc_trackCode" value="ZCFORMVIEW" />
+      <input
+        type="hidden"
+        name="zc_formIx"
+        value="3zffe3d0457c18a07ad7087cfa80cb6feeb2371f9c7e512f1d89a9bae1a87306b6"
+      />
+      <input type="hidden" name="viewFrom" value="URL_ACTION" />
+      <input type="hidden" name="scriptless" value="yes" />
+      <input type="hidden" name="zc_spmSubmit" value="ZCSPMSUBMIT" />
     </form>
   </div>
 </div>
