Replace architecture document with tech overview (#15)
- [x] Delete architecture page
- [x] Set up redirect for architecture page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,9 +7,9 @@ import RedditIcon from "../assets/icons/reddit.svg?raw";
 
 const veraidLinks = [
   { href: "/ux", text: "User Experience" },
-  { href: "/architecture", text: "Architecture" },
-  { href: "/spec", text: "Spec" },
+  { href: "/overview", text: "Tech overview" },
   { href: "/prior-art", text: "Prior art" },
+  { href: "/spec", text: "Spec" },
 ];
 
 const relaycorpLinks = [
