--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -7,8 +7,7 @@ import CloseIcon from "../assets/icons/close.svg?raw";
 const { pathname } = Astro.url;
 const navLinks = [
   { href: "/ux", text: "User experience" },
-  { href: "/architecture", text: "Architecture" },
-  { href: "/spec", text: "Spec" },
+  { href: "/overview", text: "Tech overview" },
   { href: "/prior-art", text: "Prior art" },
 ];
 ---
