Refine inline code and image styles in markdown layout
- Reduce inline code padding and text size
- Center and constrain image width with max-width
- Maintain consistent typography approach

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -54,13 +54,13 @@ const articleClasses = [
 
   // Inline code
   "[&_:not(pre)>code]:bg-neutral-900",
-  "[&_:not(pre)>code]:py-1",
+  "[&_:not(pre)>code]:py-0.5",
   "[&_:not(pre)>code]:px-1",
   "[&_:not(pre)>code]:border",
   "[&_:not(pre)>code]:border-neutral-700",
   "[&_:not(pre)>code]:rounded-sm",
   "[&_:not(pre)>code]:text-neutral-400",
-  "[&_:not(pre)>code]:text-sm",
+  "[&_:not(pre)>code]:text-xs",
   "[&_:not(pre)>code]:font-mono",
   "[&_:not(pre)>code]:break-words",
   "[&_:not(pre)>code]:whitespace-normal",
@@ -74,7 +74,8 @@ const articleClasses = [
   "prose-ol:marker:text-white",
   "prose-ul:marker:text-white",
   "[&_dt]:text-white",
-  "prose-img:w-full",
+  "prose-img:max-w-full",
+  "prose-img:mx-auto",
   "prose-h1:text-white",
   "prose-h2:text-white",
   "prose-h3:text-white",
