Adjust heading styles and colors in markdown layouts
- Set global h1-h6 text color to white in Skeleton layout
- Remove redundant white color classes from Page layout

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -30,7 +30,7 @@ const articleClasses = [
   "px-4",
   "sm:px-6",
   "prose",
-  "prose-h1:text-4xl",
+  "prose-h1:text-[2.6rem]",
   "text-sm",
   "sm:text-sm",
   "leading-normal",
@@ -76,12 +76,6 @@ const articleClasses = [
   "[&_dt]:text-white",
   "prose-img:max-w-full",
   "prose-img:mx-auto",
-  "prose-h1:text-white",
-  "prose-h2:text-white",
-  "prose-h3:text-white",
-  "prose-h4:text-white",
-  "prose-h5:text-white",
-  "prose-h6:text-white",
 ];
 ---
 
