Enhance code link styles in markdown layout
- Replace arbitrary text sizes with Tailwind's predefined sizes for h1 and h3
- Add custom styles for links within code blocks and code within links
- Use green color variants for improved readability and interaction

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -30,7 +30,7 @@ const articleClasses = [
   "px-4",
   "sm:px-6",
   "prose",
-  "prose-h1:text-[2.6rem]",
+  "prose-h1:text-4xl",
   "text-sm",
   "sm:text-sm",
   "leading-normal",
@@ -41,7 +41,7 @@ const articleClasses = [
   "prose-h2:text-3xl",
   "prose-h2:mt-10",
   "prose-h2:mb-4",
-  "prose-h3:text-[1.25rem]",
+  "prose-h3:text-xl",
   "prose-h3:mt-8",
   "prose-h3:mb-2",
   "prose-h4:mt-3",
@@ -67,6 +67,13 @@ const articleClasses = [
   "prose-code:font-normal",
   "[&_code]:before:content-['']",
   "[&_code]:after:content-['']",
+  "[&_code>a]:text-green-300",
+  "[&_code>a]:no-underline",
+  "[&_code>a]:hover:text-green-200",
+  "[&_code>a]:hover:underline",
+  "[&_a>code]:text-green-300",
+  "[&_a>code]:hover:text-green-200",
+
   "prose-strong:text-white",
   "prose-strong:font-bold",
   "prose-dt:text-white",
