Implement About page

--- a/src/components/TopNav.astro
+++ b/src/components/TopNav.astro
@@ -8,7 +8,7 @@ const { pathname } = Astro.url;
 const navLinks = [
   { href: "/ux", text: "User experience" },
   { href: "/overview", text: "Tech overview" },
-  { href: "/prior-art", text: "Prior art" },
+  { href: "/about", text: "About" },
 ];
 ---
 
