--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import RedditIcon from "../assets/icons/reddit.svg?raw";
 const veraidLinks = [
   { href: "/ux", text: "User Experience" },
   { href: "/overview", text: "Tech overview" },
-  { href: "/prior-art", text: "Prior art" },
+  { href: "/about", text: "About" },
   { href: "/spec", text: "Spec" },
 ];
 
